# telegram_news_bot

./: README.md  main.py  pyproject.toml
file/: data_0147_20260105.csv
